--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,13 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-		<title>Paryatan Nepal</title>
+		<script
+			defer
+			src="https://app.fastbots.ai/embed.js"
+			data-bot-id="cm0hjyay101swr4bjdo9yaoox"
+		></script>
+
+		<title>Nepwonders</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
